add login API (dummy)
